[package]
name = "suppaftp-client"
version = "0.0.1"
authors = ["Sergey V. Kokorin <nvksv@nvksv.ru>"]
edition = "2018" 
#documentation = "https://docs.rs/suppaftp-client/"
repository = "https://github.com/nvksv/suppaftp-client"
description = "A smart and convinient client FTP(S) library for end user"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "CHANGELOG.md"]
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["ftp", "ftps", "network-protocol", "async"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "suppaftp_client"
path = "src/lib.rs"

#[[bin]]
#name = "suppaftp"
#path = "cli/main.rs"
#required-features = ["secure", "cli-bin"]

[dependencies]
async-std = { version = "^1.9.0", optional = true }
async-native-tls = { version = "0.3.3", optional = true }
chrono = "0.4.19"
lazy_static = "1.4.0"
native-tls = { version = "^0.2", optional = true }
pin-project = { version = "^1.0.8", optional = true }
regex = "1.4.2"
rpassword = { version = "5.0.1", optional = true }
thiserror = "1.0.26"
suppaftp = { git = "https://github.com/nvksv/suppaftp" }


[dev-dependencies]
async-attributes = "1.1.2"
pretty_assertions = "0.7.2"
rand = "0.8.4"

[features]
#default = ["async-secure"]
#default = ["async"]
default = ["secure"]
#default = []

# Enable async support for suppaftp
async = ["suppaftp/async", "async-std", "pin-project"]
async-secure = ["suppaftp/async-secure", "async-std", "async-native-tls", "pin-project"]

# Enable support of FTPS which requires native-tls (openssl is required on Linux)
secure = ["suppaftp/secure", "native-tls"]

# Don't enable this feature; is used by suppaftp binary only
cli-bin = ["rpassword"]
